--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
     content: "";
     /* background-color: black; */
     position: absolute;  
-    background: url(../Food_bg.jpg) no-repeat center center/cover;
+    background: url(Food_bg.jpg) no-repeat center center/cover;
     height: 640px;
     top: 0px;
     left: 0px;
@@ -157,7 +157,7 @@
 #Client-section::before{
     content: "";
     position: absolute;
-    background: url('../Network.png');
+    background: url('Network.png');
     width: 100%;
     height: 50%;
     z-index: -1;
@@ -193,7 +193,7 @@
     height: 100%;
     z-index: -1;
     opacity: 0.6;
-    background: url('../contact2.jpg') no-repeat center center/cover;
+    background: url('contact2.jpg') no-repeat center center/cover;
 }
 
 
